# aurora

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.cfg
changes/: README.md  v0.9.1.md  v0.9.2.md  v0.9.3.md  v0.9.4.md  v0.9.5.md  v0.9.6.md  v0.9.7.md
docs/: README.md
src/aurora/: Aurora.py  CLI.py  Controller.py  Forms.py  Model.py  SQL.py  Template.py  View.py  __init__.py  connector.py  helpers.py  init.py  init_app.py  security.py
