[metadata]
name = aurora-mvc
version = 0.8.19
author = Hemin Satya
author_email = heminsatya@gmail.com
description = Aurora is an MVC web framework for creating RESTFUL CRUD applications quickly and simply
long_description = file: README.md
long_description_content_type = text/markdown
keywords = aurora, mvc, web, framework
license = MIT
url = https://github.com/heminsatya/aurora
project_urls =
    source = https://github.com/heminsatya/aurora
    Documentation = https://github.com/heminsatya/aurora/tree/main/docs
    Changelog = https://github.com/heminsatya/aurora/tree/main/changes
    Issues = https://github.com/heminsatya/aurora/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

[options.package_data]
* = *.txt, *.zip